# vslam

./: .gitignore  .gitmodules  .python-version  Tracking_Thread_Interactions.md  VGGT_Integration_Plan.md
src/orb_slam3_driver/: package.xml  setup.cfg  setup.py
src/orb_slam3_driver/orb_slam3_driver/: mono_driver_node.py
src/orb_slam3_lib/: CMakeLists.txt  package.xml
src/orb_slam3_lib/orb_slam3/include/: Frame.h  LocalMapping.h  MapDrawer.h  MapPoint.h  System.h  Tracking.h  VoxelGridCUDA.h
src/orb_slam3_lib/orb_slam3/src/: Frame.cc  LocalMapping.cc  MapDrawer.cc  MapPoint.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc  VoxelGridCUDA.cu  VoxelGridCUDA_stub.cc
src/orb_slam3_mapping/: CMakeLists.txt  package.xml
src/orb_slam3_mapping/src/: mapping_node.cpp
src/orb_slam3_msgs/: CMakeLists.txt  package.xml
src/orb_slam3_tracking/: CMakeLists.txt  package.xml
src/orb_slam3_tracking/launch/: orb_slam3_split.launch.py
src/orb_slam3_tracking/src/: tracking_node.cpp
src/orb_slam3_vggt_frontend/: CMakeLists.txt  Tracking_Thread_Interactions.md  VGGT_Tracking_Flow.md  package.xml
src/orb_slam3_vggt_frontend/launch/: vggt_frontend.launch.py
src/orb_slam3_vggt_frontend/src/: vggt_frontend_node.cpp
src/vggt_ros/: INTERFACE.md  README.md  package.xml  setup.cfg  setup.py
src/vggt_ros/config/: vggt_params.yaml
src/vggt_ros/launch/: vggt.launch.py
src/vggt_ros/vggt_ros/: geometry_utils.py  keyframe_selector.py  vggt_node.py
src/vslam_bringup/: CMakeLists.txt  package.xml
src/vslam_bringup/config/: camera_intrinsics_override.yaml  launch_params.yaml  vslam_params.yaml
src/vslam_bringup/launch/: vslam_system.launch.py
src/vslam_msgs/: CMakeLists.txt  package.xml
src/vslam_msgs/msg/: KeyFramePtr.msg  MapPointPtr.msg  SystemPtr.msg  VggtOutput.msg
