<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam3_lib</name>
  <version>1.0.0</version>
  <description>ORB-SLAM3 Library Package</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend>libeigen-dev</depend>
  <depend>libboost-dev</depend>
  <depend>pangolin</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
