<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam3_tracking</name>
  <version>1.0.0</version>
  <description>Tracking Component for ORB-SLAM3</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>orb_slam3_lib</depend>
  <depend>vslam_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
