<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vslam_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for VSLAM system</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>vggt_ros</exec_depend>
  <exec_depend>orb_slam3_vggt_frontend</exec_depend>
  <exec_depend>video_reader</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
